Add waffle page and link

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,8 +6,7 @@
         <title>Carbonara Recipe</title>
     </head>
     <body>
-        <img src="https://public-assets-ucg.meredithcorp.io/a5e044e604ad8eae6c524c75213
-        eb463/967720.jpg" alt="carbonara picture">
+        <img src="https://public-assets-ucg.meredithcorp.io/a5e044e604ad8eae6c524c75213eb463/967720.jpg">
         <h2>Description</h2>
         <p>Quick way to make a really tasty carbonara-style pasta sauce. Serve over 
             cooked pasta.</p>
