--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="./recipes/carbonara.html">Carbonara</a></li>
             <li><a href="./recipes/waffles.html">Waffles</a></li>
-            <li></li>
+            <li><a href="./recipes/salmon_patties.html">Salmon Patties</a></li>
         </ul>
     </body>
 </html>
